--- a/index.html
+++ b/index.html
@@ -1,7 +1,168 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Abirami Ramalingam</h1>
-<p>66 Stuyvesant Rd, Pittsford, NY - 14534.</p>
-</body>
-</html>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<title>Abirami Ramalingam</title>
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	<link rel="stylesheet" href="./styles/main.css">
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
+
+<body class="">
+
+	<!-- Wrapper -->
+	<div id="wrapper">
+
+		<!-- Header -->
+		<header id="header" class="alt">
+			<a href="https://kedargithub.github.io/Portfolio/index.html" class="logo"><strong>My Portfolio</strong></a>
+			<nav>
+				<a href="https://kedargithub.github.io/Portfolio/index.html#menu">Menu</a>
+			</nav>
+		</header>
+
+		<!-- Menu -->
+		
+
+		<!-- Banner -->
+		<section id="banner" class="major" style="background-position: center 0px;">
+			<div class="inner">
+				<header class="major">
+					<h1>Abirami Ramalingam</h1>
+				</header>
+				<div class="content">
+					<h2>Senior Software Developer</h2>
+					<ul class="actions">
+						<li><a href="https://kedargithub.github.io/Portfolio/index.html#contact" class="button next scrolly">About Me</a></li>
+					</ul>
+				</div>
+			</div>
+		</section>
+
+		<!-- Main -->
+		<section id="contact">
+			<div class="inner">
+
+				<!-- One -->
+				<section>
+					<div class="inner">
+						<div>
+						  <ul>
+							<li>20 years of progressive experience with documented success in the areas of Software Development and 
+								Software Engineering with Microsoft Technologies at various organizational levels</li>
+							<li>Worked as Senior Developer at Microsoft product teams (windows, Bing Ads) for 10 years @Bellevue, WA.</li>
+							<li>Hands-on Experience on C#, Microsoft Blazor, .NET and Azure development</li>
+							<li>Good at Microsoft Cloud technologies – Azure (Function APP, WebAPP, Service bus, Storage solution -
+								blob, table, queues, cosmos db, SqlDB, Docker containers)</li>
+							<li>Extensive experience of designing and developing Client/Server applications using Microsoft .NET Technology,
+								C#, VC++, MFC, MVC, ADO.NET, WCF, WWF and Entity Framework SQL Server, XML, Json.</li>	
+							<li>Good working experience in Microsoft BigData framework - COSMOS, SCOPE.</li>
+							<li>Experienced in Software Development Methodologies like Agile Methodology(scrum), Waterfall Model and Test-
+								Driven Methodology.</li>
+							<li>Experienced in migration of mainframe application to c#, Azure cloud.</li>	
+							<li>A skilled problem-solver and an efficient in managing team. Possess good interpersonal, communication and
+								Managerial skills</li>
+							<li>Knowledgeable in Project Estimation & its metrics (Function Point & WBS)</li>	
+							<li>Very good in programming with VC++, Scripting (powershell & perl).</li>
+							<li>Expertise on Retail Domain,Advertisement Domain and BI on Microsoft Bing Ads</li>
+							<li>Strong in Networking Concepts & have hands-on experience in Routing and Remote Access services (RRAS)
+								working in Windows team.</li>
+						  </ul>
+						</div>
+						<ul class="actions">
+							<li><a href="https://kedargithub.github.io/Portfolio/projects.html" class="button next">View Projects</a></li>
+						</ul>
+					</div>
+				</section>
+				<section class="split">
+					<section>
+						<div class="contact-method">
+							<span class="icon solid alt fa-envelope"></span>
+							<h3>Email</h3>
+							<a href="mailto:kedarama@buffalo.edu">abi.kannan520@gmail.com</a>
+						</div>
+					</section>
+					<section>
+						<div class="contact-method">
+							<span class="icon solid alt fa-phone"></span>
+							<h3>Phone</h3>
+							<span>(585) 910-7161</span>
+						</div>
+					</section>
+					<section>
+						<div class="contact-method">
+							<a href="https://www.google.com/maps/place/162+Winspear+Avenue,+Buffalo,+New+York,+14215,+United+States" target="_blank">
+								<span class="icon solid alt fa-home"></span>
+								<h3>Address</h3>
+								<span>66 Stuyvesant Rd<br>
+									Pittsford, New York 14534<br>
+									United States of America</span>
+							</a>
+						</div>
+					</section>
+					<section>
+						<div class="contact-method">
+							<span class="icon solid alt fa-futbol"></span>
+							<h3>Employment</h3>
+							<ul>
+								<li>Working as Senior Software Developer with Avani Technology solution, Rochester NY from Mar 2020.</li>
+								<li>Worked as Senior Software Developer with Solu Technologies, Rochester NY from Nov 2018 – Mar 2020.</li>
+								<li>Worked as SE (Software Engineer) vendor with Microsoft, Redmond (CLIENT) from Nov’14 till Aug’15.</li>
+								<li>Worked as SDE (Software Design Engineer) vendor with Microsoft, Redmond from Apr’09 till Aug’14</li>
+								<li>Worked as Senior Developer with KLA-Tencor, CA (CLIENT) through HCL from June’07 till Jan’09</li>
+								<li>Worked as SDET (Software Development Engineer in Test) vendor with Microsoft IDE, India from Sep’05 till
+									June’07</li>
+								<li>Worked as Associate Software Engineer with Virtusa, India from June 2004 to Aug 2005</li>
+							</ul>
+						</div>
+					</section>
+					<section>
+						<div class="contact-method">
+							<span class="icon solid alt fa-award"></span>
+							<h3>Employment</h3>
+							<ul>
+								<li>Best performance award for developing Project estimation tool.</li>
+								<li>Certificate of appreciation - “out of box thinking” for work in achieving CCMI-5.</li>
+							</ul>
+						</div>
+					</section>
+			</section>
+
+			</div>
+		</section>
+		<!-- Footer -->
+		<footer id="footer">
+			<div class="inner">
+				<ul class="icons">
+					<li><a href="https://github.com/KedarGitHub" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://www.linkedin.com/in/kedar-amar-nayak-67574193/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://www.kaggle.com/unbrokeneleven" class="icon brands alt fa-kaggle"><span class="label">Kaggle</span></a></li>
+					<li><a href="https://leetcode.com/kedarnayak1106/" class="icon brands alt fa-python"><span class="label">LeetCode</span></a></li>
+				</ul>
+			</div>
+		</footer>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="./files/jquery.min.js.download"></script>
+	<script src="./files/jquery.scrolly.min.js.download"></script>
+	<script src="./files/jquery.scrollex.min.js.download"></script>
+	<script src="./files/browser.min.js.download"></script>
+	<script src="./files/breakpoints.min.js.download"></script>
+	<script src="./files/util.js.download"></script>
+	<script src="./files/main.js.download"></script><nav id="menu"><div class="inner">
+			<ul class="links">
+				<li><a href="https://kedargithub.github.io/Portfolio/index.html">Home</a></li>
+				<li><a href="https://kedargithub.github.io/Portfolio/projects.html">Projects</a></li>
+				<li><a href="https://kedargithub.github.io/Portfolio/education.html">Education</a></li>
+				<li><a href="https://kedargithub.github.io/Portfolio/awards.html">Awards and Extra Curricular</a></li>
+				<li><a href="https://kedargithub.github.io/Portfolio/cover.html">Cover Letter</a></li>
+				<!-- <li><a href="connect.html">Let's Connect</a></li> -->
+			</ul>
+		</div><a class="close" href="https://kedargithub.github.io/Portfolio/index.html#menu">Close</a></nav>
+
+
+
+</body></html>
