--- a/index.html
+++ b/index.html
@@ -146,22 +146,13 @@
 	</div>
 
 	<!-- Scripts -->
-	<script src="./files/jquery.min.js.download"></script>
-	<script src="./files/jquery.scrolly.min.js.download"></script>
-	<script src="./files/jquery.scrollex.min.js.download"></script>
-	<script src="./files/browser.min.js.download"></script>
-	<script src="./files/breakpoints.min.js.download"></script>
-	<script src="./files/util.js.download"></script>
-	<script src="./files/main.js.download"></script><nav id="menu"><div class="inner">
-			<ul class="links">
-				<li><a href="https://kedargithub.github.io/Portfolio/index.html">Home</a></li>
-				<li><a href="https://kedargithub.github.io/Portfolio/projects.html">Projects</a></li>
-				<li><a href="https://kedargithub.github.io/Portfolio/education.html">Education</a></li>
-				<li><a href="https://kedargithub.github.io/Portfolio/awards.html">Awards and Extra Curricular</a></li>
-				<li><a href="https://kedargithub.github.io/Portfolio/cover.html">Cover Letter</a></li>
-				<!-- <li><a href="connect.html">Let's Connect</a></li> -->
-			</ul>
-		</div><a class="close" href="https://kedargithub.github.io/Portfolio/index.html#menu">Close</a></nav>
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
 
 
