--- a/index.html
+++ b/index.html
@@ -9,24 +9,33 @@
 	</noscript>
 </head>
 
-<body class="">
+<body class="is-preload">
 
 	<!-- Wrapper -->
 	<div id="wrapper">
 
 		<!-- Header -->
 		<header id="header" class="alt">
-			<a href="https://kedargithub.github.io/Portfolio/index.html" class="logo"><strong>My Portfolio</strong></a>
+			<a href="index.html" class="logo"><strong>My Portfolio</strong></a>
 			<nav>
-				<a href="https://kedargithub.github.io/Portfolio/index.html#menu">Menu</a>
+				<a href="#menu">Menu</a>
 			</nav>
 		</header>
 
 		<!-- Menu -->
-		
+		<nav id="menu">
+			<ul class="links">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="projects.html">Projects</a></li>
+				<li><a href="education.html">Education</a></li>
+				<li><a href="awards.html">Awards and Extra Curricular</a></li>
+				<li><a href="cover.html">Cover Letter</a></li>
+				<!-- <li><a href="connect.html">Let's Connect</a></li> -->
+			</ul>
+		</nav>		
 
 		<!-- Banner -->
-		<section id="banner" class="major" style="background-position: center 0px;">
+		<section id="banner" class="major">
 			<div class="inner">
 				<header class="major">
 					<h1>Abirami Ramalingam</h1>
@@ -34,7 +43,7 @@
 				<div class="content">
 					<h2>Senior Software Developer</h2>
 					<ul class="actions">
-						<li><a href="https://kedargithub.github.io/Portfolio/index.html#contact" class="button next scrolly">About Me</a></li>
+						<li><a href="#contact" class="button next scrolly">About Me</a></li>
 					</ul>
 				</div>
 			</div>
@@ -43,8 +52,6 @@
 		<!-- Main -->
 		<section id="contact">
 			<div class="inner">
-
-				<!-- One -->
 				<section>
 					<div class="inner">
 						<div>
@@ -71,7 +78,7 @@
 						  </ul>
 						</div>
 						<ul class="actions">
-							<li><a href="https://kedargithub.github.io/Portfolio/projects.html" class="button next">View Projects</a></li>
+							<li><a href="projects.html" class="button next">View Projects</a></li>
 						</ul>
 					</div>
 				</section>
@@ -80,7 +87,7 @@
 						<div class="contact-method">
 							<span class="icon solid alt fa-envelope"></span>
 							<h3>Email</h3>
-							<a href="mailto:kedarama@buffalo.edu">abi.kannan520@gmail.com</a>
+							<a href="mailto:abi.kannan520@gmail.com">abi.kannan520@gmail.com</a>
 						</div>
 					</section>
 					<section>
@@ -91,14 +98,12 @@
 						</div>
 					</section>
 					<section>
-						<div class="contact-method">
-							<a href="https://www.google.com/maps/place/162+Winspear+Avenue,+Buffalo,+New+York,+14215,+United+States" target="_blank">
-								<span class="icon solid alt fa-home"></span>
-								<h3>Address</h3>
-								<span>66 Stuyvesant Rd<br>
-									Pittsford, New York 14534<br>
-									United States of America</span>
-							</a>
+						<div class="contact-method">							
+							<span class="icon solid alt fa-home"></span>
+							<h3>Address</h3>
+							<span>66 Stuyvesant Rd<br>
+								Pittsford, New York 14534<br>
+								United States of America</span>							
 						</div>
 					</section>
 					<section>
@@ -120,7 +125,7 @@
 					<section>
 						<div class="contact-method">
 							<span class="icon solid alt fa-award"></span>
-							<h3>Employment</h3>
+							<h3>Awards</h3>
 							<ul>
 								<li>Best performance award for developing Project estimation tool.</li>
 								<li>Certificate of appreciation - “out of box thinking” for work in achieving CCMI-5.</li>
@@ -135,10 +140,8 @@
 		<footer id="footer">
 			<div class="inner">
 				<ul class="icons">
-					<li><a href="https://github.com/KedarGitHub" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://github.com/abi-kannan/" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="https://www.linkedin.com/in/kedar-amar-nayak-67574193/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-					<li><a href="https://www.kaggle.com/unbrokeneleven" class="icon brands alt fa-kaggle"><span class="label">Kaggle</span></a></li>
-					<li><a href="https://leetcode.com/kedarnayak1106/" class="icon brands alt fa-python"><span class="label">LeetCode</span></a></li>
 				</ul>
 			</div>
 		</footer>
