add project summary

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Abirami Ramalingam</title>
-	<meta charset=utf-8">	
+	<meta charset="utf-8">	
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<link rel="stylesheet" href="assets/css/main.css">
 	<noscript>
@@ -28,7 +28,7 @@
 			<ul class="links">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="projects.html">Projects</a></li>
-				<li><a href="education.html">Education</a></li>
+				<!-- <li><a href="education.html">Education</a></li> -->
 				<li><a href="awards.html">Awards and Extra Curricular</a></li>
 				<li><a href="cover.html">Cover Letter</a></li>
 				<!-- <li><a href="connect.html">Let's Connect</a></li> -->
@@ -142,7 +142,7 @@
 			<div class="inner">
 				<ul class="icons">
 					<li><a href="https://github.com/abi-kannan/" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="https://www.linkedin.com/in/kedar-amar-nayak-67574193/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://www.linkedin.com/in/abiramiramalingam" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 				</ul>
 			</div>
 		</footer>
